<resources>
    <string name="app_name">Trails2Education</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_launch">Trails2Education</string>

    <string name="launch_subtitle_fr">Education au patrimoine via les parcours de santé</string>
    <string name="launch_subtitle_en">Heritage education through fitness trails</string>
    <string name="launch_partners">Partners</string>
    <string name="title_activity_selection">SelectionActivity</string>

    <string name="selection_title">Search Results</string>
    <string name="selection_sort">Sort By</string>
    <string name="selection_count">Pathways</string>
    <string name="selection_count_singular">Pathway</string>

    <string name="path_name_placeholder">Pathway Name</string>
    <string name="path_country_placeholder">United Kingdom</string>
    <string name="path_vehicle_placeholder">Spaceshuttle</string>
    <string name="path_rating_placeholder">3,14</string>

    <string name="path_distance_placeholder">1000 m</string>
    <string name="path_length_placeholder">90 min</string>
    <string name="path_calories_placeholder">300 cal</string>
    <string name="path_area_placeholder">Jurban</string>


    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_content">ContentActivity</string>


    <!--<string name="lorem_ipsum">Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem ipsum, quia dolor sit amet consectetur adipisci[ng] velit, sed quia non numquam [do] eius modi tempora inci[di]dunt, ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit, qui in ea voluptate velit esse, quam nihil molestiae consequatur, vel illum, qui dolorem eum fugiat, quo voluptas nulla pariatur?


[33] At vero eos et accusamus et iusto odio dignissimos ducimus, qui blanditiis praesentium voluptatum deleniti atque corrupti, quos dolores et quas molestias excepturi sint, obcaecati cupiditate non provident, similique sunt in culpa, qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit, quo minus id, quod maxime placeat, facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet, ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat…</string>
    -->
    <string name="lorem_ipsum">Loading, or not available ..</string>
    <string name="search">Search</string>
    <string name="pathway">Pathway</string>
    <string name="country">Country</string>
    <string-array name="vehicle">
        <item>All</item>
        <item>Bicycle</item>
        <item>On Foot</item>
        <item>Wheelchair</item>
        <item>Mix</item>
    </string-array>

</resources>
