<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.trails2education.trails.LaunchActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/launch_background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:src="@drawable/launch_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <eu.trails2education.trails.views.MyTextView
                android:id="@+id/myTextView"
                style="@style/launch_subtitle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launch_subtitle_fr" />

            <eu.trails2education.trails.views.MyTextView
                android:id="@+id/myTextView2"
                style="@style/launch_subtitle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launch_subtitle_en"
                android:textColor="@color/textBlack" />

            <eu.trails2education.trails.views.MyTextView
                android:id="@+id/myTextView3"
                style="@style/launch_partners_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/launch_partners"
                android:layout_gravity="left"
                android:textColor="@color/textBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    style="@style/launch_logo"
                    android:id="@+id/launch_logo1"
                    android:src="@drawable/launch_logo1" />

                <ImageView
                    android:id="@+id/launch_logo2"
                    style="@style/launch_logo"
                    android:src="@drawable/launch_logo2" />

                <ImageView
                    android:id="@+id/launch_logo3"
                    style="@style/launch_logo"
                    android:src="@drawable/launch_logo3" />

                <ImageView
                    android:id="@+id/launch_logo4"
                    style="@style/launch_logo"
                    android:src="@drawable/launch_logo4" />

                <ImageView
                    android:id="@+id/launch_logo5"
                    style="@style/launch_logo"
                    android:src="@drawable/launch_logo5" />

            </LinearLayout>

            <ImageView
                android:id="@+id/launch_logo6"
                style="@style/launch_logo"
                android:layout_gravity="left"
                android:src="@drawable/launch_logo6" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
