<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:baselineAligned="false"
                android:cropToPadding="false"
                app:srcCompat="@drawable/launch_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="423dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="168dp"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:text="@string/search"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="31dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/calories" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/pathway"
                    android:textColor="@color/textGray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="31dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/calories" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/country"
                    android:textColor="@color/textGray" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="249dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:verticalScrollbarPosition="defaultPosition" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="249dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/common_google_signin_btn_text_dark_default" />

            <Button
                android:layout_width="249dp"
                android:layout_height="48dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/textRed"
                android:text="@string/search" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>